# mlscript

./: .gitignore  .gitmodules  CMakeLists.txt  Documentation.md  LICENSE  README.md  Untitled.ipynb  Untitled1.ipynb  install_kernel.py  main.py  mlscript.cp313-win_amd64.pyd  mlscript.exp  mlscript.lib  nn_test.ms  performance_test.ms  pyproject.toml  repl.py  temp_test.ms  test_suite.ms  v0.2_GrandTour.ms
.github/workflows/: build_wheels.yml
.ipynb_checkpoints/: Untitled1-checkpoint.ipynb
cpp_backend/: CMakeLists.txt  bindings.cpp  context.hpp  evaluator.cpp  evaluator.hpp  nn.hpp
interpreter/: CMakeLists.txt  app.py  ast_nodes.py  core.py  interpreter.py  lexer.py  lexer_pygments.py  main.py  mlscript.cp313-win_amd64.pyd  mlscript.exp  mlscript.lib  parser.py
mlscript_interpreter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mlscript_kernel/: __main__.py  kernel.py
mlscript_kernel/kernelspec/: kernel.json
wheelhouse/: mlscript_lang-1.0.0-cp310-cp310-win32.whl  mlscript_lang-1.0.0-cp310-cp310-win_amd64.whl  mlscript_lang-1.0.0-cp311-cp311-win32.whl  mlscript_lang-1.0.0-cp311-cp311-win_amd64.whl  mlscript_lang-1.0.0-cp312-cp312-win32.whl  mlscript_lang-1.0.0-cp312-cp312-win_amd64.whl  mlscript_lang-1.0.0-cp313-cp313-win32.whl  mlscript_lang-1.0.0-cp313-cp313-win_amd64.whl  mlscript_lang-1.0.0-cp314-cp314-win32.whl  mlscript_lang-1.0.0-cp314-cp314-win_amd64.whl  mlscript_lang-1.0.0-cp314-cp314t-win32.whl  mlscript_lang-1.0.0-cp314-cp314t-win_amd64.whl  mlscript_lang-1.0.0-cp38-cp38-win32.whl  mlscript_lang-1.0.0-cp38-cp38-win_amd64.whl  mlscript_lang-1.0.0-cp39-cp39-win32.whl  mlscript_lang-1.0.0-cp39-cp39-win_amd64.whl
