[project]
name = "mlscript-lang"
version = "0.9.0"
description = "A specialized scripting language for AI and Machine Learning."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
authors = [
    { name = "Amit Singh", email = "amitsingh4102001@gmail.com" },
]

[project.urls]
Homepage = "https://github.com/AmitSingh410/mlscript"
"Bug Tracker" = "https://github.com/AmitSingh410/mlscript/issues"

[build-system]
requires = ["scikit-build-core>=0.8", "cmake>=3.15", "pybind11","numpy"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.minimum-version = "3.15"
wheel.packages = ["interpreter", "mlscript_kernel"]